--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -21,6 +21,8 @@ html
             li.nav-item
               a.nav-link(href='/textbooks/') Text Books
             li.nav-item
+              a.nav-link(href='/quizcontest') Quiz Contests
+            li.nav-item
               a.nav-link(href='/register-login/') SIGNUP/SIGNIN
             li.nav-item
               a.nav-link(href='/profile/') Profile
